CustomObjects/objects/SBQQ__Theme__c.object
<CustomObject>
    <fields>
        <fullName>SBQQ__AccentIconDisabledFontColor__c</fullName>
        <label>Icon Disabled Font Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__AccentIconFontColor__c</fullName>
        <label>Icon Font Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__AccentIconHoverFontColor__c</fullName>
        <label>Icon Hover Font Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__CompiledCSS__c</fullName>
        <label>Hidden Values</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SBQQ__DetailColor__c</fullName>
        <label>Detail Background Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__DocumentId__c</fullName>
        <label>Document ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__GeneralBorderColor__c</fullName>
        <label>General Border Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__GeneralColor__c</fullName>
        <label>General Background Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__GeneralFontColor__c</fullName>
        <label>General Font Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__GroupButtonBorderColor__c</fullName>
        <label>Group Button Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__GroupButtonColor__c</fullName>
        <label>Group Button Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__GroupButtonDisabledFontColor__c</fullName>
        <label>Group Button Disabled Font Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__GroupButtonFontColor__c</fullName>
        <label>Group Button Font Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__GroupButtonHoverColor__c</fullName>
        <label>Group Button Hover Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__GroupButtonHoverFontColor__c</fullName>
        <label>Group Button Hover Font Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__HeaderBorderColor__c</fullName>
        <label>Header Border Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__HeaderColor__c</fullName>
        <label>Header Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__HeaderFontColor__c</fullName>
        <label>Header Font Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__HeaderSecondaryFontColor__c</fullName>
        <label>Header Supporting Font Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__HideIcons__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, will hide the icon square located on the left side of custom page headers.</description>
        <inlineHelpText>If checked, will hide the icon square located on the left side of custom page headers.</inlineHelpText>
        <label>Hide Icons on Page Headers?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__IconFontColor__c</fullName>
        <label>Icon Font Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__PrimaryButtonColor__c</fullName>
        <label>Primary Button Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__PrimaryButtonFontColor__c</fullName>
        <label>Primary Button Font Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__PrimaryButtonHoverColor__c</fullName>
        <label>Primary Button Hover Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__SecondaryFontColor__c</fullName>
        <label>Secondary Font Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__SecondaryHeaderColor__c</fullName>
        <label>Secondary Header Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__TabSelectedColor__c</fullName>
        <label>Tab Selected Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__TableHeaderFontColor__c</fullName>
        <label>Table Header Font Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__TableRowHoverColor__c</fullName>
        <label>Table Row Hover Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <label>Theme</label>
    <nameField>
        <label>Theme Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Themes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>